[package]
name = "src-graph"
authors = ["tamaron <tamaron(at)gmail.com>"]
version = "0.1.4"
edition = "2021"
description = "cargo subcommand which shows struct dependencies"
repository = "https://github.com/tamaroning/src-graph"
license = "MIT"

[[bin]]
name = "cargo-src-graph"
path = "src/main.rs"

[[bin]]
name = "src-graph-driver"
path = "src/driver.rs"

[dependencies]
rustc-ap-graphviz = "662.0.0"

[package.metadata.rust-analyzer]
rustc_private = true
